# iroha

./: CMakeLists.txt  circle.yml  docker.hub.auth.sh
.circleci/: config.yml
config/: config.json
core/consensus/: CMakeLists.txt  consensus_event.hpp  sumeragi.cpp  sumeragi.hpp
core/consensus/connection/: connection.hpp
core/infra/: CMakeLists.txt
core/infra/config/: abstract_config_manager.hpp  iroha_config_with_json.cpp  iroha_config_with_json.hpp  peer_service_with_json.cpp  peer_service_with_json.hpp
core/infra/connection/: CMakeLists.txt  add.hpp  connection_with_grpc_flatbuf.cpp
core/infra/repository/: CMakeLists.txt  world_state_repository_with_level_db.cpp
core/infra/server/: CMakeLists.txt  http_server_with_cappuccino.cpp
core/model/: CMakeLists.txt  model.hpp  transaction.hpp
core/model/commands/: CMakeLists.txt  add.cpp  add.hpp  batch.hpp  (+9 more)
core/service/: CMakeLists.txt  executor.cpp  executor.hpp  flatbuf_factory.hpp  peer_service.hpp
core/transaction_builder/: transaction_builder.hpp
core/util/: CMakeLists.txt  exception.cpp  exception.hpp  ip_checker.cpp  ip_checker.hpp
core/validation/: CMakeLists.txt  transaction_validator.cpp  transaction_validator.hpp
docker/: README.md  build.sh
docker/dev/: Dockerfile
docker/tiny/: Dockerfile
docs/: iroha_api.rst
flatbuf/: api.fbs  api.grpc.fb.cc  api.grpc.fb.h  api_generated.h  api_generated.h.b  convertor.hpp
peer/: CMakeLists.txt  main.cpp
smart_contract/Test/: Test.java  compile.sh
test/: CMakeLists.txt
test/connection/: CMakeLists.txt  connection_with_grpc_test.cpp
test/consensus/: CMakeLists.txt  sumeragi_test.cpp  transaction_test.cpp
test/model/: CMakeLists.txt  add_test.cpp
test/model/transaction_builder/: CMakeLists.txt  transaction_builder_test.cpp
test/smart_contract/: java_query_repo_asset_test.cpp  java_vm_test.cpp
(+79 files in other folders)
